# aoc2023

./: .gitignore  Cargo.toml  README.md
src/: aoc.rs  day01.rs  main.rs
