[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
authors = ["Luis <LuisGlasr@gmail.com>"]
description = "Advent of Code 2023 Solutions"
documentation = "https://github.com/glaserL/aoc2023"


[dependencies]

reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
